docs/0.9/5-experience/5-0-intro.md
# 后记、体验与参考

<div align="center"><img src="https://i.loli.net/2018/10/17/5bc6e3d608b81.png" alt="Thinking" width="20%"/></div>

## 终端

WSL 终端下的开发环境是完全可用的一个完美 Linux 环境。美观、稳定、可定制化程度高。完美。👌

## VSCode + WSL 工具链

在 Remote-WSL 诞生之后，我们完全可以直接使用 WSL 下的全部工具进行开发工作。详情请参考：[Remote-WSL 环境下 VS Code 的配置与特性](https://dowww.spencerwoo.com/3-VSCode/#remote-wsl-%E6%8F%92%E4%BB%B6)

## 参考资料

感谢前辈总结的经验，没有以下这些文章我不可能总结出这些东西。

- [lloydstubber/my-wsl-setup](https://github.com/lloydstubber/my-wsl-setup)
- [Voronoff/wsl_setup.md](https://gist.github.com/Voronoff/059c50f9fd354386c305c55af1f3a61f#install-and-set-up-python-to-work-with-vscode-and-wsl)
- [Running VSCode for Linux in WSL #2760](https://github.com/Microsoft/WSL/issues/2760)
- [sirredbeard/Awesome-WSL](https://github.com/sirredbeard/Awesome-WSL)
- [ethanhs/WSL-Programs](https://github.com/ethanhs/WSL-Programs)
- [如何在 Windows Subsystem for Linux (WSL) 上运行 Linux GUI 软件](http://www.yuan-ji.me/%E5%A6%82%E4%BD%95%E5%9C%A8Windows-Subsystem-for-Linux-\(WSL\)-%E4%B8%8A%E8%BF%90%E8%A1%8CLinux-GUI-%E8%BD%AF%E4%BB%B6/)
- [在 WSL 下启动 VSCode](https://zhuanlan.zhihu.com/p/33226830)
- [Setting proxy in git](https://gist.github.com/laispace/666dd7b27e9116faece6)

也感谢 Freepik 给我提供如此优秀的平面设计灵感。

- Website icons and its affiliated designs are licensed by [Freepik](https://www.freepik.com/free-vector/modern-web-design-concept-with-isometric-view_3086978.htm).

## License 许可 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>

本作品采用 [知识共享署名-相同方式共享 4.0 国际许可协议](https://creativecommons.org/licenses/by-sa/4.0/) 进行许可。

本著作係採用 [創用 CC 姓名標示-相同方式分享 4.0 國際 授權條款](https://creativecommons.org/licenses/by-sa/4.0/) 授權.

This work is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License](http://creativecommons.org/licenses/by-sa/4.0/).

---

📟 **Dev on Windows with WSL** ©Spencer Woo. Released under the CC BY-SA 4.0 International License.

Authored and maintained by Spencer Woo.

[@Portfolio](https://spencerwoo.com/) · [@Blog](https://blog.spencerwoo.com/) · [@GitHub](https://github.com/spencerwooo)
